# Vindicta-Agents

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  adl_fail.txt  analyze_log.py  build.cmd  build.sh  collection_err.txt  conflict_config.txt  conflict_domain.txt  conflict_meta.txt  conflict_tools_init.txt  git_status.txt  index.html  langgraph.json  mdlint.txt  mkdocs.yml  print_log.py  pyproject.toml  rebase_tests.txt  rebase_tests2.txt  report.xml  ruff_output.txt  ruff_remaining.txt  showcase_log.txt  simulation_output.txt  sitemap.xml  swarm_flight_recorder.db  test_nexus_err.txt  tests_err.txt  tests_output.txt  tests_output_utf8.txt  verify_monitor.py
.agent/workflows/: adl-pr-review.md  adl-standup.md  adl-weekly-report.md  arch-review.md  jd-bugfix.md  po-release-management.md  po-roadmap-update.md  po-sprint-planning.md  sd-implement.md  sm-check-in.md  sm-end-day.md  sm-start-work.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md  sse-code-review.md
.devcontainer/: .env.example  Dockerfile  Dockerfile.slim  devcontainer.json  init-agent.sh
.github/workflows/: auto-merge.yml  ci.yml  gitleaks.yml  (+1 more)
agent-integration/: index.html
antigravity-cli-plan/: index.html
architecture/: index.html
automation/: GUIDE.md  README.md  Register-AgentTasks.ps1  apply-branch-protections.sh  build.cmd  build.sh
daily-playbook/: index.html
devcontainer-guides/: index.html
docs/: agent-integration.md  antigravity-cli-plan.md  antigravity_installer_mock.py  architecture.md  daily-playbook.md  how-to-delegate.md  index.md  lifecycle.md  quick-reference.md  roadmap-v0.2.x.md
docs-docusaurus/: docusaurus.config.js  package-lock.json  package.json
features/: agents.feature  async_kernel.feature  autonomous_workflow.feature  axioms.feature  discovery.feature  governance.feature  review_gates.feature  spec_queue.feature  swarm.feature  task_queue.feature  tools.feature
lifecycle/: index.html
quick-reference/: index.html
roadmap-v0.2.x/: index.html
scripts/: fix_showcase_prs.py  run_showcase.py  run_swarm.py
search/: search_index.json
specs/: architecture_docs.md
src/: demo_cross_domain.py  demo_grand_tour.py
tests/: Automation.Tests.ps1  test-branch-protections.sh  test-docker-build.sh  test-gpg-signing.sh  test_agents.py  test_agents_deep.py
(+134 files in other folders)
