[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vindicta-agents"
version = "0.1.0"
description = "SDKs, Workflows, and Swarm for the Vindicta Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vindicta-foundation",
    "pydantic>=2.0",
    "psutil>=7.2.2",
    "gputil>=1.4.0",
    "setuptools>=82.0.0",
    "langgraph",
    "langchain-core",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.22.1",
    "structlog>=25.5.0",
    "websockets>=16.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/vindicta_agents"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
vindicta-foundation = { workspace = true }

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.coverage.run]
source = ["src/vindicta_agents"]
omit = ["tests/*", "features/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[dependency-groups]
dev = [
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "behave>=1.2.6",
]
